command router y properties working properly